--- a/index.html
+++ b/index.html
@@ -100,6 +100,92 @@
           </div>
         </div>
 
+        <div class="grid-col" id="rating">
+            <div class="grid-item--header" id="headerRating">
+              <i data-eva="heart", data-eva-animation="pulse", data-eva-fill="#FF5D73", data-eva-height="14px", data-eva-width="14px"></i>
+            </div>
+            <div class="grid-item1">
+                <span class="rating" onClick="like()">
+                    <i data-eva="heart-outline", data-eva-animation="pulse", data-eva-fill="#FF5D73", data-eva-height="11px", data-eva-width="11px"></i>
+                </span>
+                <span id="likeCount">
+                    0
+                </span>
+            </div>
+            <div class="grid-item1">
+                <span class="rating" onClick="like2()">
+                    <i data-eva="heart-outline", data-eva-animation="pulse", data-eva-fill="#FF5D73", data-eva-height="11px", data-eva-width="11px"></i>
+                </span>
+                <span id="likeCount2">
+                    0
+                </span>
+            </div>
+            <div class="grid-item1">
+                <span class="rating" onClick="like()">
+                    <i data-eva="heart-outline", data-eva-animation="pulse", data-eva-fill="#FF5D73", data-eva-height="11px", data-eva-width="11px"></i>
+                </span>
+                <span id="likeCount3">
+                    0
+                </span>
+            </div>
+            <div class="grid-item1">
+                <span class="rating" onClick="like()">
+                    <i data-eva="heart-outline", data-eva-animation="pulse", data-eva-fill="#FF5D73", data-eva-height="11px", data-eva-width="11px"></i>
+                </span>
+                <span id="likeCount4">
+                    0
+                </span>
+            </div>
+            <div class="grid-item1">
+                <span class="rating" onClick="like()">
+                    <i data-eva="heart-outline", data-eva-animation="pulse", data-eva-fill="#FF5D73", data-eva-height="11px", data-eva-width="11px"></i>
+                </span>
+                <span id="likeCount5">
+                    0
+                </span>
+            </div>
+            <div class="grid-item1">
+                <span class="rating" onClick="like()">
+                    <i data-eva="heart-outline", data-eva-animation="pulse", data-eva-fill="#FF5D73", data-eva-height="11px", data-eva-width="11px"></i>
+                </span>
+                <span id="likeCount6">
+                    0
+                </span>
+            </div>
+            <div class="grid-item1">
+                <span class="rating" onClick="like()">
+                    <i data-eva="heart-outline", data-eva-animation="pulse", data-eva-fill="#FF5D73", data-eva-height="11px", data-eva-width="11px"></i>
+                </span>
+                <span id="likeCount7">
+                    0
+                </span>
+            </div>
+            <div class="grid-item1">
+                <span class="rating" onClick="like()">
+                    <i data-eva="heart-outline", data-eva-animation="pulse", data-eva-fill="#FF5D73", data-eva-height="11px", data-eva-width="11px"></i>
+                </span>
+                <span id="likeCount8">
+                    0
+                </span>
+            </div>
+            <div class="grid-item1">
+                <span class="rating" onClick="like()">
+                    <i data-eva="heart-outline", data-eva-animation="pulse", data-eva-fill="#FF5D73", data-eva-height="11px", data-eva-width="11px"></i>
+                </span>
+                <span id="likeCount9">
+                    0
+                </span>
+            </div>
+            <div class="grid-item1">
+                <span class="rating" onClick="like()">
+                    <i data-eva="heart-outline", data-eva-animation="pulse", data-eva-fill="#FF5D73", data-eva-height="11px", data-eva-width="11px"></i>
+                </span>
+                <span id="likeCount10">
+                    0
+                </span>
+            </div>
+          </div>
+
         <div class="grid-col" id="prices">
           <div class="grid-item--header" id="headerPrice">
             Price
@@ -205,102 +291,6 @@
           </div>
           <div class="grid-item">
             <i class="far fa-paper-plane"></i> <i class="far fa-envelope"></i>
-          </div>
-        </div>
-
-        <div class="grid-col" id="rating">
-          <div class="grid-item--header" id="headerRating">
-            <i data-eva="heart", data-eva-animation="pulse", data-eva-fill="#ED6A5A", data-eva-height="14px", data-eva-width="14px"></i>
-          </div>
-          <div class="grid-item">
-              <span class="rating" onClick="like()">
-                  <i class="far fa-heart"></i>
-                  <i class="fas fa-heart"></i>
-              </span>
-              <span id="likeCount">
-                  0
-              </span>
-          </div>
-          <div class="grid-item">
-              <span class="rating" onClick="like2()">
-                  <i class="far fa-heart"></i>
-                  <i class="fas fa-heart"></i>
-              </span>
-              <span id="likeCount2">
-                  0
-              </span>
-          </div>
-          <div class="grid-item">
-              <span class="rating" onClick="like()">
-                  <i class="far fa-heart"></i>
-                  <i class="fas fa-heart"></i>
-              </span>
-              <span id="likeCount3">
-                  0
-              </span>
-          </div>
-          <div class="grid-item">
-              <span class="rating" onClick="like()">
-                  <i class="far fa-heart"></i>
-                  <i class="fas fa-heart"></i>
-              </span>
-              <span id="likeCount4">
-                  0
-              </span>
-          </div>
-          <div class="grid-item">
-              <span class="rating" onClick="like()">
-                  <i class="far fa-heart"></i>
-                  <i class="fas fa-heart"></i>
-              </span>
-              <span id="likeCount5">
-                  0
-              </span>
-          </div>
-          <div class="grid-item">
-              <span class="rating" onClick="like()">
-                  <i class="far fa-heart"></i>
-                  <i class="fas fa-heart"></i>
-              </span>
-              <span id="likeCount6">
-                  0
-              </span>
-          </div>
-          <div class="grid-item">
-              <span class="rating" onClick="like()">
-                  <i class="far fa-heart"></i>
-                  <i class="fas fa-heart"></i>
-              </span>
-              <span id="likeCount7">
-                  0
-              </span>
-          </div>
-          <div class="grid-item">
-              <span class="rating" onClick="like()">
-                  <i class="far fa-heart"></i>
-                  <i class="fas fa-heart"></i>
-              </span>
-              <span id="likeCount8">
-                  0
-              </span>
-          </div>
-          <div class="grid-item">
-              <span class="rating" onClick="like()">
-                  <i class="far fa-heart"></i>
-                  <i class="fas fa-heart"></i>
-              </span>
-              <span id="likeCount9">
-                  0
-              </span>
-          </div>
-          <div class="grid-item">
-              <span class="rating" onClick="like()">
-                  <i class="far fa-heart"></i>
-                  <i class="fas fa-heart"></i>
-              </span>
-              <span id="likeCount10">
-                  0
-              </span>
           </div>
         </div>
 
